# spacebee-commander

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
CLI/: app_cli.py
GUI - Web/: app_web.py
GUI - Web/templates/: TC-MV.html  imageViewer.html  index copy.html  index.html  noServer.html
commander/: app.py  commander.py  communication.py  telecommand_interface.py
commander/Telecommands/: enable_telemetry.py  get_git_version.py  get_timestamp.py  set_height.py  set_mode.py  set_target_velocity.py  start_forward.py  start_homing.py  stop_forward.py  stop_turn.py  take_photo.py
spacebee_commander/: app.py  commander.py  commander_serial.py  commander_udp.py  commands_loader.py  communication.py  message_header.py  message_manager.py  serial_handler.py  telecommand_interface.py  udp_handler.py
spacebee_commander/Telecommands/: enable_telemetry.py  get_git_version.py  get_timestamp.py  set_height.py  set_mode.py  set_target_velocity.py  start_forward.py  start_homing.py  start_turn.py  stop_forward.py  stop_turn.py  take_photo.py
src/: TelecommandInterface.py  app.py  commander.py  communcation.py  communication.py  message_manager.py  network_parameters.py  telecommand_interface.py
src/Telecommands/: __init__.py  enable_telemetry.py  get_git_version.py  get_timestamp.py  set_height.py  set_mode.py  set_profile_mode.py  set_target_velocity.py  start_forward.py  start_foward.py  start_turn.py  stop_forward.py  stop_foward.py  stop_turn.py  take_photo.py  tm_enable.py  tm_set_height.py
test/: test.py  test_RCPS.py
(+5 files in other folders)
