[project]
name = "spacebee-commander"
version = "0.0.0"  # Placeholder, override by Git tag
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.3.0, <9.0.0)",
]

[tool.poetry.scripts]
commander-udp = "spacebee_commander.commander_udp:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
